tests/build/cases/widget_new/missing_value3.stderr
error[E0061]: this function takes 1 argument but 0 arguments were supplied
 --> cases/widget_new/missing_value3.rs:7:9
  |
7 |         cursor = ;
  |         ^^^^^^ an argument is missing
  |
note: associated function defined here
 --> $WORKSPACE/zero-ui/src/properties/cursor_.rs
  |
  | #[property(context, default(CursorIcon::Default))]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the attribute macro `property` (in Nightly builds, run with -Z macro-backtrace for more info)
help: provide the argument
   |
7  |         cursor(/* value */) = ;
   |               +++++++++++++
